--- a/Contest/pom.xml
+++ b/Contest/pom.xml
@@ -18,15 +18,28 @@
 			</snapshots>
 		</repository>
 	</repositories>
-	
+
 	<dependencies>
+
+		<!-- 서블릿 프로그램에 필요 -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		
 		<!-- Spring할때 꼭 필요함 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.1.0.RELEASE</version>
 		</dependency>
-		
+
 		<!-- JSON Util -->
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
